Fix the gap around nav menu items
At least part of the problem came from the default index.css that
comes with the gatsby starter. I haven't removed it completely
because for the most part it seems okay to me, but if it continues
to be a problem I may start over.
There are still the issues in chrome, I expect they may also
come from the default index.css. I'll check that later.

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -330,7 +330,7 @@ hgroup {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-ul {
+/* ul {
   margin-left: 1.45rem;
   margin-right: 0;
   margin-top: 0;
@@ -341,7 +341,7 @@ ul {
   margin-bottom: 1.45rem;
   list-style-position: outside;
   list-style-image: none;
-}
+} */
 ol {
   margin-left: 1.45rem;
   margin-right: 0;
@@ -510,15 +510,15 @@ dt {
 th {
   font-weight: bold;
 }
-li {
+/* li {
   margin-bottom: calc(1.45rem / 2);
-}
+} */
 ol li {
   padding-left: 0;
 }
-ul li {
+/* ul li {
   padding-left: 0;
-}
+} */
 li > ol {
   margin-left: 1.45rem;
   margin-bottom: calc(1.45rem / 2);
